--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
+
+
+    "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start -p $PORT"
+  }
+
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.16",
@@ -31,3 +33,5 @@
     "typescript": "^5"
   }
 }
+
+
